# controllers/users_controller.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"net/http"
 	"vaksin-id-be/dto/payload"
+	_ "vaksin-id-be/dto/response"
 	service "vaksin-id-be/services/users"
 	"vaksin-id-be/util"
 
@@ -19,6 +20,15 @@ func NewUserController(userServ service.UserService) *UserController {
 	}
 }
 
+// @Summary 	Register Users
+// @Description Register User
+// @Tags 		users
+// @Accept		json
+// @Produce 	json
+// @Param		register body 	payload.RegisterUser	true	"Input Register User"
+// @Success 	201		{object} 	response.Response{data=payload.RegisterUser}		"success register user"
+// @Router 		/api/v1/signup [post]
+// @failure		400		{string}	string	"error"
 func (u *UserController) RegisterUser(ctx echo.Context) error {
 	var payloads payload.RegisterUser
 
@@ -51,6 +61,16 @@ func (u *UserController) RegisterUser(ctx echo.Context) error {
 	})
 }
 
+// @Summary 	Login Users
+// @Description Login User
+// @Tags 		users
+// @Accept		json
+// @Produce 	json
+// @Param		login body 	payload.Login	true	"Input Login User"
+// @Success 	200		{object} 	response.Response{data=response.Login}		"success login user"
+// @Router 		/api/v1/login [post]
+// @failure		400		{string}	string	"error"
+// @failure		401		{string}	string	"error"
 func (u *UserController) LoginUser(ctx echo.Context) error {
 	var payload payload.Login
 
@@ -77,6 +97,12 @@ func (u *UserController) LoginUser(ctx echo.Context) error {
 	})
 }
 
+// @Summary		get user by nik
+// @Description	This can only be done by the logged in user.
+// @Tags		users
+// @Produce		json
+// @Success		200	{object}	response.Response{data=response.UserProfile}	"Success get user"
+// @Router		/api/v1/profile [get]
 func (u *UserController) GetUserDataByNik(ctx echo.Context) error {
 	nik := ctx.Request().Header.Get("Authorization")
 	data, err := u.UserService.GetUserDataByNik(nik)
@@ -95,6 +121,16 @@ func (u *UserController) GetUserDataByNik(ctx echo.Context) error {
 	})
 }
 
+// @Summary 	update users
+// @Description This can only be done by the logged in user.
+// @Tags 		users
+// @Accept		json
+// @Produce 	json
+// @Param		update body 	payload.UpdateUser	true	"Input new data user"
+// @Success 	200		{object} 	response.Response{data=payload.UpdateUser}		"success update user"
+// @Router 		/api/v1/profile [put]
+// @failure		400		{string}	string	"error"
+// @failure		401		{string}	string	"error"
 func (u *UserController) UpdateUser(ctx echo.Context) error {
 	var payloads payload.UpdateUser
 
@@ -120,6 +156,12 @@ func (u *UserController) UpdateUser(ctx echo.Context) error {
 	})
 }
 
+// @Summary		get user address
+// @Description	This can only be done by the logged in user.
+// @Tags		users
+// @Produce		json
+// @Success		200	{object}	response.Response{data=response.UserAddresses}	"Success get user address"
+// @Router		/api/v1/profile/address [get]
 func (u *UserController) GetUserAddress(ctx echo.Context) error {
 	nik := ctx.Request().Header.Get("Authorization")
 	data, err := u.UserService.GetAddressUser(nik)
@@ -138,6 +180,13 @@ func (u *UserController) GetUserAddress(ctx echo.Context) error {
 	})
 }
 
+// @Summary 	delete user
+// @Description delete data users
+// @Tags 		users
+// @Produce 	json
+// @Success 	200		{string} 	string	"success delete user"
+// @Router 		/api/v1/profile [delete]
+// @failure		401		{string}	string	"error"
 func (u *UserController) DeleteUser(ctx echo.Context) error {
 	nik := ctx.Request().Header.Get("Authorization")
 
@@ -154,6 +203,16 @@ func (u *UserController) DeleteUser(ctx echo.Context) error {
 	})
 }
 
+// @Summary 	update users addres
+// @Description This can only be done by the logged in user.
+// @Tags 		users
+// @Accept		json
+// @Produce 	json
+// @Param		update body 	payload.UpdateAddress	true	"Input new data user address"
+// @Success 	200		{object} 	response.Response{data=payload.UpdateUser}		"success update address user"
+// @Router 		/api/v1/profile/address [put]
+// @failure		400		{string}	string	"error"
+// @failure		401		{string}	string	"error"
 func (u *UserController) UpdateUserAddress(ctx echo.Context) error {
 	var payloads payload.UpdateAddress
 
